update PacketHandler.java